k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prompt2mesh
  labels:
    name: prompt2mesh
    environment: dev
